--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -94,6 +94,7 @@ serde_json.workspace = true
 session.workspace = true
 snafu.workspace = true
 snap = "1"
+jsonb.workspace = true
 sql.workspace = true
 strum.workspace = true
 table.workspace = true
