--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -153,7 +153,7 @@ backoff_deadline = "5mins"
 
 ## The logging options.
 [logging]
-## The directory to store the log files.
+## The directory to store the log files. If set to empty, logs will not be written to files.
 dir = "/tmp/greptimedb/logs"
 
 ## The log level. Can be `info`/`debug`/`warn`/`error`.
@@ -168,6 +168,9 @@ otlp_endpoint = "http://localhost:4317"
 
 ## Whether to append logs to stdout.
 append_stdout = true
+
+## The log format. Can be `text`/`json`.
+log_format = "text"
 
 ## The percentage of tracing will be sampled and exported.
 ## Valid range `[0, 1]`, 1 means all traces are sampled, 0 means all traces are not sampled, the default value is 1.
