--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -336,7 +336,7 @@ credential_path = "test"
 ## The credential of the google cloud storage.
 ## **It's only used when the storage type is `Gcs`**.
 ## +toml2docs:none-default
-credential= "base64-credential"
+credential = "base64-credential"
 
 ## The container of the azure account.
 ## **It's only used when the storage type is `Azblob`**.
@@ -545,7 +545,7 @@ fork_dictionary_bytes = "1GiB"
 
 ## The logging options.
 [logging]
-## The directory to store the log files.
+## The directory to store the log files. If set to empty, logs will not be written to files.
 dir = "/tmp/greptimedb/logs"
 
 ## The log level. Can be `info`/`debug`/`warn`/`error`.
@@ -560,6 +560,9 @@ otlp_endpoint = "http://localhost:4317"
 
 ## Whether to append logs to stdout.
 append_stdout = true
+
+## The log format. Can be `text`/`json`.
+log_format = "text"
 
 ## The percentage of tracing will be sampled and exported.
 ## Valid range `[0, 1]`, 1 means all traces are sampled, 0 means all traces are not sampled, the default value is 1.
