fix: use 'target' for 'actions-rust-lang/setup-rust-toolchain' to fix cross build failed

--- a/.github/actions/build-windows-artifacts/action.yml
+++ b/.github/actions/build-windows-artifacts/action.yml
@@ -27,7 +27,7 @@ runs:
     - name: Install rust toolchain
       uses: actions-rust-lang/setup-rust-toolchain@v1
       with:
-        targets: ${{ inputs.arch }}
+        target: ${{ inputs.arch }}
         components: llvm-tools-preview
 
     - name: Rust Cache
