--- a/.github/actions/build-macos-artifacts/action.yml
+++ b/.github/actions/build-macos-artifacts/action.yml
@@ -42,7 +42,7 @@ runs:
     - name: Install rust toolchain
       uses: actions-rust-lang/setup-rust-toolchain@v1
       with:
-        targets: ${{ inputs.arch }}
+        target: ${{ inputs.arch }}
 
     - name: Start etcd # For integration tests.
       if: ${{ inputs.disable-run-tests == 'false' }}
