--- a/src/pipeline/Cargo.toml
+++ b/src/pipeline/Cargo.toml
@@ -56,6 +56,7 @@ table.workspace = true
 tokio.workspace = true
 urlencoding = "2.1"
 yaml-rust = "0.4"
+jsonb.workspace = true
 
 [dev-dependencies]
 catalog = { workspace = true, features = ["testing"] }
