--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -16,6 +16,7 @@ workspace = true
 [dependencies]
 aide = { version = "0.9", features = ["axum"] }
 api.workspace = true
+ahash = "0.8"
 arrow.workspace = true
 arrow-flight.workspace = true
 arrow-ipc.workspace = true
@@ -108,6 +109,7 @@ tower-http = { version = "0.4", features = ["full"] }
 urlencoding = "2.1"
 uuid.workspace = true
 zstd.workspace = true
+jsonb.workspace = true
 
 [target.'cfg(not(windows))'.dependencies]
 tikv-jemalloc-ctl = { version = "0.6", features = ["use_std", "stats"] }
