--- a/src/datatypes/Cargo.toml
+++ b/src/datatypes/Cargo.toml
@@ -12,9 +12,10 @@ test = []
 workspace = true
 
 [dependencies]
-arrow.workspace = true
 arrow-array.workspace = true
 arrow-schema.workspace = true
+arrow.workspace = true
+base64.workspace = true
 common-base.workspace = true
 common-decimal.workspace = true
 common-error.workspace = true
@@ -23,6 +24,7 @@ common-telemetry.workspace = true
 common-time.workspace = true
 datafusion-common.workspace = true
 enum_dispatch = "0.3"
+greptime-proto.workspace = true
 num = "0.4"
 num-traits = "0.2"
 ordered-float = { version = "3.0", features = ["serde"] }
