Revert "build: add mysql and postgresql clients to greptimedb image (#4677)"
This reverts commit 3e4a69017d75dda4bacc13983bbfed0070a6a929.

--- a/docker/ci/ubuntu/Dockerfile
+++ b/docker/ci/ubuntu/Dockerfile
@@ -11,9 +11,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     python3.10 \
     python3.10-dev \
     python3-pip \
-    curl \
-    mysql-client \
-    postgresql-client
+    curl
 
 COPY $DOCKER_BUILD_ROOT/docker/python/requirements.txt /etc/greptime/requirements.txt
 
