--- a/src/datatypes/Cargo.toml
+++ b/src/datatypes/Cargo.toml
@@ -25,6 +25,7 @@ common-time.workspace = true
 datafusion-common.workspace = true
 enum_dispatch = "0.3"
 greptime-proto.workspace = true
+jsonb.workspace = true
 num = "0.4"
 num-traits = "0.2"
 ordered-float = { version = "3.0", features = ["serde"] }
