--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -58,6 +58,7 @@ humantime-serde.workspace = true
 hyper = { version = "0.14", features = ["full"] }
 influxdb_line_protocol = { git = "https://github.com/evenyag/influxdb_iox", branch = "feat/line-protocol" }
 itertools.workspace = true
+jsonb.workspace = true
 lazy_static.workspace = true
 mime_guess = "2.0"
 notify.workspace = true
@@ -70,7 +71,7 @@ parking_lot = "0.12"
 pgwire = "0.20"
 pin-project = "1.0"
 pipeline.workspace = true
-postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
+postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-serde_json-1"] }
 pprof = { version = "0.13", features = [
     "flamegraph",
     "prost-codec",
