--- a/src/sql/Cargo.toml
+++ b/src/sql/Cargo.toml
@@ -26,6 +26,7 @@ datatypes.workspace = true
 hex = "0.4"
 iso8601 = "0.6.1"
 itertools.workspace = true
+jsonb.workspace = true
 lazy_static.workspace = true
 regex.workspace = true
 serde_json.workspace = true
