--- a/config/flownode.example.toml
+++ b/config/flownode.example.toml
@@ -84,6 +84,15 @@ log_format = "text"
 [logging.tracing_sample_ratio]
 default_ratio = 1.0
 
+## The slow query log options.
+[logging.slow_query]
+## Whether to enable slow query log.
+enable = false
+
+## The threshold of slow query.
+## +toml2docs:none-default
+threshold = "10s"
+
 ## The tracing options. Only effect when compiled with `tokio-console` feature.
 [tracing]
 ## The tokio console address.
