refactor: simplify timeout logical

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,7 +120,7 @@ etcd-client = { version = "0.13" }
 fst = "0.4.7"
 futures = "0.3"
 futures-util = "0.3"
-greptime-proto = { git = "https://github.com/GreptimeTeam/greptime-proto.git", rev = "8cee1681a5dd46765333f655bfdadd077f5b9c16" }
+greptime-proto = { git = "https://github.com/GreptimeTeam/greptime-proto.git", rev = "f440e8459f38425ce03554d65dfc4c9fd39675e8" }
 humantime = "2.1"
 humantime-serde = "1.1"
 itertools = "0.10"
@@ -153,6 +153,7 @@ reqwest = { version = "0.12", default-features = false, features = [
     "stream",
     "multipart",
 ] }
+scopeguard = "1.2"
 rskafka = { git = "https://github.com/influxdata/rskafka.git", rev = "75535b5ad9bae4a5dbb582c82e44dfd81ec10105", features = [
     "transport-tls",
 ] }
