--- a/tests/conf/standalone-test.toml.template
+++ b/tests/conf/standalone-test.toml.template
@@ -24,6 +24,19 @@ data_home = '{data_home}'
 addr = '127.0.0.1:4001'
 runtime_size = 8
 
+[mysql]
+enable = true
+addr = "127.0.0.1:4002"
+runtime_size = 2
+
+[mysql.tls]
+mode = "disable"
+
+[postgres]
+enable = true
+addr = "127.0.0.1:4003"
+runtime_size = 2
+
 [procedure]
 max_retry_times = 3
 retry_delay = "500ms"
