--- a/tests/runner/Cargo.toml
+++ b/tests/runner/Cargo.toml
@@ -15,6 +15,7 @@ common-error.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
 common-time.workspace = true
+datatypes = { workspace = true }
 mysql = { version = "23.0.1" }
 tokio-postgres = { workspace = true }
 serde.workspace = true
