fix: config test failed and use 'similar_asserts::assert_eq' to replace 'assert_eq' for long string compare

--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -59,6 +59,7 @@ rstest_reuse.workspace = true
 serde_json.workspace = true
 servers = { workspace = true, features = ["testing"] }
 session.workspace = true
+similar-asserts.workspace = true
 snafu.workspace = true
 sql.workspace = true
 sqlx = { version = "0.6", features = [
