--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -60,6 +60,7 @@ rstest_reuse.workspace = true
 serde_json.workspace = true
 servers = { workspace = true, features = ["testing"] }
 session.workspace = true
+similar-asserts.workspace = true
 snafu.workspace = true
 sql.workspace = true
 sqlx = { version = "0.6", features = [
