feat: change to use `aws-lc-sys` on windows instead

--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -70,7 +70,7 @@ openmetrics-parser = "0.4"
 opensrv-mysql = { git = "https://github.com/discord9/opensrv", branch = "fix_uaf" }
 opentelemetry-proto.workspace = true
 parking_lot = "0.12"
-pgwire = { version = "0.22", features = ["server-api-ring"] }
+pgwire = "0.22"
 pin-project = "1.0"
 pipeline.workspace = true
 postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-serde_json-1"] }
@@ -87,7 +87,7 @@ rand.workspace = true
 regex.workspace = true
 reqwest.workspace = true
 rust-embed = { version = "6.6", features = ["debug-embed"] }
-rustls = { version = "0.23", features = ["ring", "logging", "std", "tls12"] }
+rustls = "0.23"
 rustls-pemfile = "2.0"
 rustls-pki-types = "1.0"
 schemars.workspace = true
@@ -100,7 +100,7 @@ sql.workspace = true
 strum.workspace = true
 table.workspace = true
 tokio.workspace = true
-tokio-rustls = { version = "0.26", features = ["logging", "tls12", "ring"] }
+tokio-rustls = "0.26"
 tokio-stream = { workspace = true, features = ["net"] }
 tokio-util.workspace = true
 tonic.workspace = true
@@ -137,6 +137,11 @@ tokio-test = "0.4"
 
 [target.'cfg(not(windows))'.dev-dependencies]
 pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
+
+[target.'cfg(windows)'.dependencies]
+aws-lc-sys = { version = "0.21.0", features = [
+    "prebuilt-nasm",
+] } # use prebuilt nasm on windows per https://github.com/aws/aws-lc-rs/blob/main/aws-lc-sys/README.md#use-of-prebuilt-nasm-objects
 
 [build-dependencies]
 common-version.workspace = true
