--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -65,9 +65,9 @@ notify.workspace = true
 object-pool = "0.5"
 once_cell.workspace = true
 openmetrics-parser = "0.4"
-# use crates.io version after https://github.com/datafuselabs/opensrv/pull/67 is merged
+# use crates.io version after current revision is merged in next release
 # opensrv-mysql = "0.7.0"
-opensrv-mysql = { git = "https://github.com/discord9/opensrv", branch = "fix_uaf" }
+opensrv-mysql = { git = "https://github.com/datafuselabs/opensrv", rev = "6bbc3b65e6b19212c4f7fc4f40c20daf6f452deb" }
 opentelemetry-proto.workspace = true
 parking_lot = "0.12"
 pgwire = "0.22"
