--- a/src/operator/Cargo.toml
+++ b/src/operator/Cargo.toml
@@ -48,6 +48,7 @@ query.workspace = true
 regex.workspace = true
 serde_json.workspace = true
 session.workspace = true
+sha2 = "0.10.8"
 snafu.workspace = true
 sql.workspace = true
 sqlparser.workspace = true
