--- a/docker/dev-builder/ubuntu/Dockerfile
+++ b/docker/dev-builder/ubuntu/Dockerfile
@@ -64,7 +64,7 @@ RUN rustup toolchain install ${RUST_TOOLCHAIN}
 # Note: if we use the latest version, we may encounter the following `use of unstable library feature 'io_error_downcast'` error.
 # RUN cargo install cargo-binstall --version 1.6.6 --locked
 # compile from source take too long, so we use the precompiled binary instead
-COPY pull_binstall.sh /usr/local/bin/pull_binstall.sh
+COPY $DOCKER_BUILD_ROOT/docker/dev-builder/ubuntu/pull_binstall.sh /usr/local/bin/pull_binstall.sh
 RUN chmod +x /usr/local/bin/pull_binstall.sh && /usr/local/bin/pull_binstall.sh
 
 # Install nextest.
