--- a/docker/dev-builder/ubuntu/Dockerfile
+++ b/docker/dev-builder/ubuntu/Dockerfile
@@ -27,7 +27,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
 # https://github.com/GreptimeTeam/greptimedb/actions/runs/10935485852/job/30357457188#step:3:7106
 # `aws-lc-sys` require gcc >= 10.3.0 to work, hence alias to use gcc-10
 RUN apt-get remove -y gcc-9 g++-9 cpp-9 && \
-    apt autoremove -y && apt-get install -y gcc-10 g++-10 cpp-10 make cmake && \
+    apt-get install -y gcc-10 g++-10 cpp-10 make cmake && \
     ln -sf /usr/bin/gcc-10 /usr/bin/gcc && ln -sf /usr/bin/g++-10 /usr/bin/g++ && \
     ln -sf /usr/bin/gcc-10 /usr/bin/cc && \
     ln -sf /usr/bin/g++-10 /usr/bin/cpp && ln -sf /usr/bin/g++-10 /usr/bin/c++ && \
@@ -68,7 +68,7 @@ RUN rustup toolchain install ${RUST_TOOLCHAIN}
 # Note: if we use the latest version, we may encounter the following `use of unstable library feature 'io_error_downcast'` error.
 # RUN cargo install cargo-binstall --version 1.6.6 --locked
 # compile from source take too long, so we use the precompiled binary instead
-COPY $DOCKER_BUILD_ROOT/docker/dev-builder/ubuntu/pull_binstall.sh /usr/local/bin/pull_binstall.sh
+COPY $DOCKER_BUILD_ROOT/docker/dev-builder/binstall/pull_binstall.sh /usr/local/bin/pull_binstall.sh
 RUN chmod +x /usr/local/bin/pull_binstall.sh && /usr/local/bin/pull_binstall.sh
 
 # Install nextest.
