--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -271,7 +271,11 @@ jobs:
         run: cargo install cargo-gc-bin
       - name: Check aws-lc-sys will not build
         shell: bash
-        run: cargo tree -i aws-lc-sys -e features | grep aws-lc-sys && echo "Found aws-lc-sys, due to it having problem compiling on older gcc and etc. for now, please replace it with ring for now until it improve it's building experience" && exit 1 || true
+        run: |
+             if cargo tree -i aws-lc-sys -e features | grep -q aws-lc-sys; then
+               echo "Found aws-lc-sys, which has compilation problems on older gcc versions. Please replace it with ring until its building experience improves."
+               exit 1
+             fi
       - name: Build greptime bianry
         shell: bash
         # `cargo gc` will invoke `cargo build` with specified args
