feat: add StatementStatistics

--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -63,6 +63,7 @@ store-api.workspace = true
 substrait.workspace = true
 table.workspace = true
 tokio.workspace = true
+rand.workspace = true
 
 [dev-dependencies]
 approx_eq = "0.1"
