--- a/config/flownode.example.toml
+++ b/config/flownode.example.toml
@@ -93,9 +93,9 @@ enable = false
 ## @toml2docs:none-default
 threshold = "10s"
 
-## The sampling rate of slow query log.
+## The sampling ratio of slow query log. The value should be in the range of (0, 1].
 ## @toml2docs:none-default
-sample_rate = 1.0
+sample_ratio = 1.0
 
 ## The tracing options. Only effect when compiled with `tokio-console` feature.
 [tracing]
