--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -639,9 +639,9 @@ enable = false
 ## @toml2docs:none-default
 threshold = "10s"
 
-## The sampling rate of slow query log.
+## The sampling ratio of slow query log. The value should be in the range of (0, 1].
 ## @toml2docs:none-default
-sample_rate = 1.0
+sample_ratio = 1.0
 
 ## The datanode can export its metrics and send to Prometheus compatible service (e.g. send to `greptimedb` itself) from remote-write API.
 ## This is only used for `greptimedb` to export its own metrics internally. It's different from prometheus scrape.
