--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -54,6 +54,7 @@ prometheus.workspace = true
 promql.workspace = true
 promql-parser.workspace = true
 prost.workspace = true
+rand.workspace = true
 regex.workspace = true
 session.workspace = true
 snafu.workspace = true
