refactor: change sqlness ports to avoid conflict with local instance

--- a/tests/conf/standalone-test.toml.template
+++ b/tests/conf/standalone-test.toml.template
@@ -20,13 +20,13 @@ linger = "5ms"
 type = 'File'
 data_home = '{data_home}'
 
-[grpc_options]
-addr = '127.0.0.1:4001'
+[grpc]
+addr = '127.0.0.1:29401'
 runtime_size = 8
 
 [mysql]
 enable = true
-addr = "127.0.0.1:4002"
+addr = "127.0.0.1:29402"
 runtime_size = 2
 
 [mysql.tls]
@@ -34,7 +34,7 @@ mode = "disable"
 
 [postgres]
 enable = true
-addr = "127.0.0.1:4003"
+addr = "127.0.0.1:29403"
 runtime_size = 2
 
 [procedure]
