--- a/src/common/wal/Cargo.toml
+++ b/src/common/wal/Cargo.toml
@@ -26,6 +26,7 @@ serde.workspace = true
 serde_with.workspace = true
 snafu.workspace = true
 tokio.workspace = true
+rate_limit = "0.1.1"
 
 [dev-dependencies]
 serde_json.workspace = true
