--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -75,6 +75,7 @@ format_num = "0.1"
 num = "0.4"
 num-traits = "0.2"
 paste = "1.0"
+pretty_assertions = "1.4.0"
 rand.workspace = true
 session = { workspace = true, features = ["testing"] }
 statrs = "0.16"
