--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -7,7 +7,7 @@ license.workspace = true
 [features]
 dashboard = []
 mem-prof = ["dep:common-mem-prof"]
-pprof = ["dep:pprof"]
+pprof = ["dep:common-pprof"]
 testing = []
 
 [lints]
@@ -37,6 +37,7 @@ common-macro.workspace = true
 common-mem-prof = { workspace = true, optional = true }
 common-meta.workspace = true
 common-plugins.workspace = true
+common-pprof = { workspace = true, optional = true }
 common-query.workspace = true
 common-recordbatch.workspace = true
 common-runtime.workspace = true
@@ -75,11 +76,6 @@ pgwire = { version = "0.25.0", default-features = false, features = ["server-api
 pin-project = "1.0"
 pipeline.workspace = true
 postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-serde_json-1"] }
-pprof = { version = "0.13", features = [
-    "flamegraph",
-    "prost-codec",
-    "protobuf",
-], optional = true }
 prometheus.workspace = true
 promql-parser.workspace = true
 prost.workspace = true
@@ -136,7 +132,7 @@ tokio-postgres = "0.7"
 tokio-postgres-rustls = "0.12"
 tokio-test = "0.4"
 
-[target.'cfg(not(windows))'.dev-dependencies]
+[target.'cfg(unix)'.dev-dependencies]
 pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
 
 [target.'cfg(windows)'.dependencies]
