--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -71,11 +71,15 @@ arrow.workspace = true
 catalog = { workspace = true, features = ["testing"] }
 common-macro.workspace = true
 common-query = { workspace = true, features = ["testing"] }
+fastrand = "2.0"
 format_num = "0.1"
 num = "0.4"
 num-traits = "0.2"
 paste = "1.0"
+pretty_assertions = "1.4.0"
 rand.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 session = { workspace = true, features = ["testing"] }
 statrs = "0.16"
 stats-cli = "3.0"
