--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -17,10 +17,10 @@ workspace = true
 ahash = "0.8"
 aide = { version = "0.9", features = ["axum"] }
 api.workspace = true
-arrow.workspace = true
 arrow-flight.workspace = true
 arrow-ipc.workspace = true
 arrow-schema.workspace = true
+arrow.workspace = true
 async-trait = "0.1"
 auth.workspace = true
 axum = { workspace = true, features = ["multipart"] }
@@ -46,9 +46,9 @@ common-telemetry.workspace = true
 common-time.workspace = true
 common-version = { workspace = true, features = ["codec"] }
 dashmap.workspace = true
-datafusion.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
+datafusion.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
 futures = "0.3"
@@ -70,6 +70,7 @@ once_cell.workspace = true
 openmetrics-parser = "0.4"
 # use crates.io version after current revision is merged in next release
 # opensrv-mysql = "0.7.0"
+jsonpath-rust = { path = "/home/paomian/jsonpath-rust" }
 opensrv-mysql = { git = "https://github.com/datafuselabs/opensrv", rev = "6bbc3b65e6b19212c4f7fc4f40c20daf6f452deb" }
 opentelemetry-proto.workspace = true
 parking_lot = "0.12"
@@ -97,17 +98,18 @@ snap = "1"
 sql.workspace = true
 strum.workspace = true
 table.workspace = true
-tokio.workspace = true
 tokio-rustls = "0.26"
 tokio-stream = { workspace = true, features = ["net"] }
 tokio-util.workspace = true
-tonic.workspace = true
+tokio.workspace = true
 tonic-reflection = "0.11"
+tonic.workspace = true
 tower = { workspace = true, features = ["full"] }
 tower-http = { version = "0.4", features = ["full"] }
 urlencoding = "2.1"
 uuid.workspace = true
 zstd.workspace = true
+ref-cast = "1.0"
 
 [target.'cfg(not(windows))'.dependencies]
 tikv-jemalloc-ctl = { version = "0.6", features = ["use_std", "stats"] }
