feat/alter-ttl:  Update greptime-proto source and add ChangeTableOptions handling
 - Change greptime-proto source repository and revision in Cargo.lock and Cargo.toml
 - Implement handling for ChangeTableOptions in grpc-expr and meta modules
 - Add support for parsing and applying region option changes in mito2
 - Introduce new error type for invalid change table option requests
 - Add humantime dependency to store-api
 - Fix SQL syntax in tests for changing column types

--- a/src/store-api/Cargo.toml
+++ b/src/store-api/Cargo.toml
@@ -27,6 +27,7 @@ serde_json.workspace = true
 snafu.workspace = true
 strum.workspace = true
 tokio.workspace = true
+humantime.workspace = true
 
 [dev-dependencies]
 async-stream.workspace = true
