--- a/Cargo.toml
+++ b/Cargo.toml
@@ -185,7 +185,7 @@ tokio-util = { version = "0.7", features = ["io-util", "compat"] }
 toml = "0.8.8"
 tonic = { version = "0.11", features = ["tls", "gzip", "zstd"] }
 tower = { version = "0.4" }
-uuid = { version = "1.7", features = ["serde", "v4", "fast-rng"] }
+uuid = { version = "1.7", features = ["serde", "v4", "fast-rng", "v7"] }
 zstd = "0.13"
 
 ## workspaces members
