feat: dynamic definition of plugin options

--- a/src/plugins/Cargo.toml
+++ b/src/plugins/Cargo.toml
@@ -10,6 +10,7 @@ workspace = true
 [dependencies]
 auth.workspace = true
 common-base.workspace = true
+common-plugins.workspace = true
 datanode.workspace = true
 frontend.workspace = true
 meta-srv.workspace = true
