chore: use greptime dockerhub image (#6865)
Signed-off-by: liyang <daviderli614@gmail.com>

--- a/.github/actions/setup-etcd-cluster/action.yml
+++ b/.github/actions/setup-etcd-cluster/action.yml
@@ -25,8 +25,8 @@ runs:
         --set persistence.size=2Gi \
         --create-namespace \
         --set global.security.allowInsecureImages=true \
-        --set image.registry=public.ecr.aws/i8k6a5e1 \
-        --set image.repository=bitnami/etcd \
+        --set image.registry=docker.io \
+        --set image.repository=greptime/etcd \
         --set image.tag=3.6.1-debian-12-r3 \
         --version 12.0.8 \
         -n ${{ inputs.namespace }}
