--- a/.github/actions/setup-kafka-cluster/action.yml
+++ b/.github/actions/setup-kafka-cluster/action.yml
@@ -23,8 +23,8 @@ runs:
         --set listeners.controller.protocol=PLAINTEXT \
         --set listeners.client.protocol=PLAINTEXT \
         --create-namespace \
-        --set image.registry=public.ecr.aws/i8k6a5e1 \
-        --set image.repository=bitnami/kafka \
+        --set image.registry=docker.io \
+        --set image.repository=greptime/kafka \
         --set image.tag=3.9.0-debian-12-r1 \
         --version 31.0.0 \
         -n ${{ inputs.namespace }}
